--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Hello Coursera</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Hello Coursera</h1>
 <p>This is a paragraph.</p>
 
 </body>
